<resources>
    <!-- Authentication Strings -->
    <string name="email_required">Email is required</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="password_required">Password is required</string>
    <string name="password_too_short">Password must be at least 6 characters</string>
    <string name="password_mismatch">Passwords don\'t match</string>
    <string name="full_name_required">Full name is required</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_button">LOGIN</string>
    <string name="signup_prompt">Don\'t have an account? Sign up</string>
    <string name="login_failed">Login failed. Please try again.</string>
    <string name="registration_failed">Registration failed. Please try again.</string>
    <string name="profile_save_failed">Failed to save profile</string>
    
    <!-- App Strings -->
    <string name="app_name">PHINMA Connect</string>
    <string name="select_school">Select Your School</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="tagline">Connecting PHINMA Students Nationwide</string>
</resources>